--- a/.config
+++ b/.config
@@ -16,12 +16,10 @@ CONFIG_OPENVPN_openssl_ENABLE_PF=y
 CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
 CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
 CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
-CONFIG_PACKAGE_NTFS-3G_HAS_PROBE=y
 CONFIG_PACKAGE_UnblockNeteaseMusic=y
 CONFIG_PACKAGE_UnblockNeteaseMusicGo=y
 CONFIG_PACKAGE_appfilter=y
 CONFIG_PACKAGE_boost=y
-CONFIG_PACKAGE_boost-date_time=y
 CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-system=y
 CONFIG_PACKAGE_brook=y
@@ -32,11 +30,8 @@ CONFIG_PACKAGE_containerd=y
 CONFIG_PACKAGE_coreutils=y
 CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-nohup=y
-CONFIG_PACKAGE_coreutils-sleep=y
 CONFIG_PACKAGE_dns2socks=y
 CONFIG_PACKAGE_docker-ce=y
-CONFIG_PACKAGE_frpc=y
-CONFIG_PACKAGE_frps=y
 CONFIG_PACKAGE_glib2=y
 CONFIG_PACKAGE_grub2-efi=y
 CONFIG_PACKAGE_haproxy=y
@@ -69,7 +64,6 @@ CONFIG_PACKAGE_kmod-nf-flow=y
 CONFIG_PACKAGE_kmod-nf-ipvs=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-oaf=y
-CONFIG_PACKAGE_kmod-openvswitch=y
 CONFIG_PACKAGE_kmod-shortcut-fe=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
 CONFIG_PACKAGE_kmod-tun=y
@@ -78,19 +72,15 @@ CONFIG_PACKAGE_libatomic=y
 CONFIG_PACKAGE_libattr=y
 CONFIG_PACKAGE_libbz2=y
 CONFIG_PACKAGE_libcap=y
-CONFIG_PACKAGE_libcap-ng=y
 CONFIG_PACKAGE_libcares=y
-CONFIG_PACKAGE_libdb47=y
 CONFIG_PACKAGE_libdevmapper=y
 CONFIG_PACKAGE_libelf=y
 CONFIG_PACKAGE_libev=y
-CONFIG_PACKAGE_libexpat=y
 CONFIG_PACKAGE_libffi=y
-CONFIG_PACKAGE_libgdbm=y
 CONFIG_PACKAGE_libhttp-parser=y
 CONFIG_PACKAGE_libipset=y
 CONFIG_PACKAGE_libltdl=y
-CONFIG_PACKAGE_liblzma=y
+CONFIG_PACKAGE_liblua5.3=y
 CONFIG_PACKAGE_liblzo=y
 CONFIG_PACKAGE_libmbedtls=y
 CONFIG_PACKAGE_libmount=y
@@ -102,18 +92,17 @@ CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_libsqlite3=y
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libtirpc=y
-CONFIG_PACKAGE_libunbound-light=y
 CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_libwebsockets-full=y
 # CONFIG_PACKAGE_libwolfssl is not set
-CONFIG_PACKAGE_libxml2=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-advanced-reboot=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-commands=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 CONFIG_PACKAGE_luci-app-dockerman_INCLUDE_docker_ce=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
-# CONFIG_PACKAGE_luci-app-flowoffload is not set
+CONFIG_PACKAGE_luci-app-flowoffload=y
 CONFIG_PACKAGE_luci-app-frpc=y
 CONFIG_PACKAGE_luci-app-frps=y
 CONFIG_PACKAGE_luci-app-mwan3=y
@@ -128,23 +117,20 @@ CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_dns2socks=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_kcptun=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin is not set
 CONFIG_PACKAGE_luci-app-sfe=y
 CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-syncdial=y
 CONFIG_PACKAGE_luci-app-tcpdump=y
-CONFIG_PACKAGE_luci-app-trojan-server=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-unblockmusic=y
-CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-webadmin=y
 CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-commands-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-flowoffload-zh-cn is not set
+CONFIG_PACKAGE_luci-i18n-flowoffload-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-frps-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-mwan3-zh-cn=y
@@ -157,10 +143,8 @@ CONFIG_PACKAGE_luci-i18n-openvpn-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-sfe-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-tcpdump-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-trojan-server-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-unblockmusic-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-webadmin-zh-cn=y
 CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-lib-fs=y
@@ -168,9 +152,9 @@ CONFIG_PACKAGE_luci-theme-argon-dark-mod=y
 CONFIG_PACKAGE_luci-theme-argon-light-mod=y
 CONFIG_PACKAGE_luci-theme-bootstrap-blue=y
 CONFIG_PACKAGE_luci-theme-bootstrap-mod=y
+CONFIG_PACKAGE_luci-theme-freifunk-generic=y
 CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_microsocks=y
-CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_mount-utils=y
 CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_naiveproxy=y
@@ -178,56 +162,11 @@ CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_node=y
 CONFIG_PACKAGE_npc=y
 CONFIG_PACKAGE_nspr=y
-# CONFIG_PACKAGE_ntfs-3g=y
 CONFIG_PACKAGE_ntpclient=y
 CONFIG_PACKAGE_open-vm-tools=y
 CONFIG_PACKAGE_openvpn-easy-rsa=y
 CONFIG_PACKAGE_openvpn-openssl=y
 CONFIG_PACKAGE_pdnsd-alt=y
-CONFIG_PACKAGE_python=y
-CONFIG_PACKAGE_python-base=y
-CONFIG_PACKAGE_python-codecs=y
-CONFIG_PACKAGE_python-compiler=y
-CONFIG_PACKAGE_python-ctypes=y
-CONFIG_PACKAGE_python-db=y
-CONFIG_PACKAGE_python-decimal=y
-CONFIG_PACKAGE_python-distutils=y
-CONFIG_PACKAGE_python-email=y
-CONFIG_PACKAGE_python-gdbm=y
-CONFIG_PACKAGE_python-light=y
-CONFIG_PACKAGE_python-logging=y
-CONFIG_PACKAGE_python-multiprocessing=y
-CONFIG_PACKAGE_python-ncurses=y
-CONFIG_PACKAGE_python-openssl=y
-CONFIG_PACKAGE_python-pydoc=y
-CONFIG_PACKAGE_python-six=y
-CONFIG_PACKAGE_python-sqlite3=y
-CONFIG_PACKAGE_python-unittest=y
-CONFIG_PACKAGE_python-xml=y
-CONFIG_PACKAGE_python3=y
-CONFIG_PACKAGE_python3-asyncio=y
-CONFIG_PACKAGE_python3-base=y
-CONFIG_PACKAGE_python3-cgi=y
-CONFIG_PACKAGE_python3-cgitb=y
-CONFIG_PACKAGE_python3-codecs=y
-CONFIG_PACKAGE_python3-ctypes=y
-CONFIG_PACKAGE_python3-dbm=y
-CONFIG_PACKAGE_python3-decimal=y
-CONFIG_PACKAGE_python3-distutils=y
-CONFIG_PACKAGE_python3-email=y
-CONFIG_PACKAGE_python3-gdbm=y
-CONFIG_PACKAGE_python3-light=y
-CONFIG_PACKAGE_python3-logging=y
-CONFIG_PACKAGE_python3-lzma=y
-CONFIG_PACKAGE_python3-multiprocessing=y
-CONFIG_PACKAGE_python3-ncurses=y
-CONFIG_PACKAGE_python3-openssl=y
-CONFIG_PACKAGE_python3-pydoc=y
-CONFIG_PACKAGE_python3-six=y
-CONFIG_PACKAGE_python3-sqlite3=y
-CONFIG_PACKAGE_python3-unittest=y
-CONFIG_PACKAGE_python3-urllib=y
-CONFIG_PACKAGE_python3-xml=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_runc=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
@@ -236,18 +175,20 @@ CONFIG_PACKAGE_shadowsocks-libev-ss-server=y
 CONFIG_PACKAGE_shadowsocksr-libev-alt=y
 CONFIG_PACKAGE_shadowsocksr-libev-server=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
+CONFIG_PACKAGE_simple-obfs=y
 CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_ssocks=y
 CONFIG_PACKAGE_tcpdump=y
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_tini=y
-CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_trojan-go=y
 CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_uuidgen=y
 CONFIG_PACKAGE_v2ray=y
+CONFIG_PACKAGE_v2ray-plugin=y
+CONFIG_PACKAGE_xray=y
 CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
 CONFIG_SQLITE3_FTS3=y
 CONFIG_SQLITE3_FTS4=y
@@ -257,10 +198,10 @@ CONFIG_SQLITE3_RTREE=y
 # CONFIG_TARGET_IMAGES_GZIP is not set
 CONFIG_TROJAN_GO_COMPRESS_UPX=y
 CONFIG_V2RAY_COMPRESS_UPX=y
-CONFIG_V2RAY_DISABLE_NONE=y
 CONFIG_V2RAY_EXCLUDE_ASSETS=y
 CONFIG_V2RAY_EXCLUDE_V2CTL=y
-CONFIG_V2RAY_JSON_INTERNAL=y
+CONFIG_XRAY_COMPRESS_UPX=y
+CONFIG_XRAY_EXCLUDE_ASSETS=y
 CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
